test/bad/bad19.dj
class C extends Object {
  nat foo(Object o) {
    nat i;
    0;
  }
}
main {
  C o;
  1 || 1<3;
  0 || o; //non-nat type in disjunction
  0;
}
